Fix overflow hidden

--- a/client/src/screens/Route/Commands/Commands.css
+++ b/client/src/screens/Route/Commands/Commands.css
@@ -19,3 +19,7 @@
   width: 3rem;
   margin-top: 0.1rem;
 }
+
+.hkcGBu {
+  overflow: visible !important;
+}
